# withinbot

./: .gitignore  Cargo.toml  README.md  default.nix  docker.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: nix.yml  rust.yml
6E/: The_Source.homebrewery.md
campaigns/: Area.dhall  Bonus.dhall  Campaign.dhall  ItemKind.dhall  Monster.dhall  MonsterItem.dhall  NPC.dhall  Prelude.dhall  Roll.dhall  Stat.dhall  WinCondition.dhall  campaigns.dhall  default.nix  package.dhall
campaigns/Miau/: README.md  md.dhall  oldideas.md  package.dhall  winCondition.dhall
campaigns/Miau/areas/: armor_shop.dhall  cian.dhall  cihan.dhall  inn.dhall  package.dhall  start.dhall  tavern.dhall
campaigns/Miau/items/: amulet_of_bandacy.dhall  amulet_of_focus.dhall  amulet_of_the_old_ones.dhall  bane_of_lizards_shortsword.dhall  battleaxe.dhall  blessed_dagger_of_stabbing.dhall  boomerang.dhall  cactus_fruit.dhall  dagger.dhall  face_mask.dhall  flask.dhall  gold_amulet.dhall  greatbow.dhall  greatsword.dhall  iron_shield.dhall  light_armor.dhall  longbow.dhall  longsword.dhall  maiden_armor.dhall  mihari_amulet.dhall  mihari_armor.dhall  package.dhall  ration.dhall  sand_robe.dhall  sandshoes.dhall  sandstorm_amulet.dhall  shield.dhall  shortsword.dhall  super_boomerang.dhall  sword_of_two_truths.dhall  tolkath_battleaxe.dhall  torch.dhall  whisperwind.dhall
campaigns/Miau/monsters/: bandit_scout.dhall  bandit_soilder.dhall  boomerang_rat.dhall  great_sand_lizard.dhall  major_boomerang_rat.dhall  major_sand_lizard.dhall  package.dhall  sand_lizard.dhall  tolkath_the_destroyer.dhall
campaigns/shared/: package.dhall
campaigns/shared/consumables/: hydroflask.dhall  package.dhall
campaigns/types/: Area.dhall  Campaign.dhall  Item.dhall  Monster.dhall  NPC.dhall  Range.dhall  Roll.dhall  Species.dhall  Spell.dhall
campaigns/types/toMD/: area.dhall  bonus.dhall  campaign.dhall  item.dhall  itemKind.dhall  monster.dhall  monsterItem.dhall  npc.dhall  roll.dhall  species.dhall  spell.dhall  stat.dhall  winCondition.dhall
contrib/lua/discord_webhook/: Cargo.toml
contrib/lua/discord_webhook/src/: lib.rs
discord_webhook/: Cargo.toml
discord_webhook/examples/: hi.rs
discord_webhook/src/: lib.rs
nix/: sources.json
six_e/: Cargo.toml
six_e/benches/: load_campaign.rs
six_e/src/: game.rs  lib.rs  types.rs
src/: config.rs  logger.rs  main.rs
src/commands/: furbooru.rs  mod.rs  owner.rs  printerfacts.rs  six_e.rs  swatch.rs
