[package]
name = "withinbot"
version = "0.1.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"
license-file = "LICENSE"
description = "A bot for Within"
homepage = "https://github.com/Xe/withinbot"
repository = "https://github.com/Xe/withinbot"
readme = "README.md"

[dependencies]
anyhow = "1"
beats = "0.1"
diesel = { version = "1.4", features = ["sqlite"] }
dnd_dice_roller = "0.3.0"
envy = "0.4"
env_logger = "0"
furbooru = "0.3"
kankyo = "0.3"
log = "0.4"
pfacts = "0"
rand = "0"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "0.3", features = ["macros"] }

# in-repo packages
discord_webhook = { path = "./discord_webhook" }
six_e = { path = "./six_e" }

[dependencies.serenity]
version = "0.9.0-rc.2"
features = ["cache", "framework", "standard_framework", "gateway"]

[workspace]
members = [
  "./discord_webhook",
  "./contrib/lua/discord_webhook",
  "./six_e"
]

[profile.release]
lto = true
