[package]
name = "lua_discord_webhook"
version = "0.1.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
discord_webhook = { path = "../../../discord_webhook" }
mlua = { version = "0.4", features = ["lua53", "module", "async"] }
mlua_derive = "0.4"
smol = { version = "0.3", features = ["tokio02"] }
